package com.uern.tep.crminsight.model.enums;

public enum CanalInteracao {
    TELEFONE,
    EMAIL,
    WHATSAPP,
    REUNIAO
}
