package com.uern.tep.crminsight.model.enums;

public enum RankVendedor {
    OURO,
    PRATA,
    BRONZE,
    TREINAMENTO
}
