package com.uern.tep.crminsight.model.enums;

public enum RoleUsuario {
    ADMIN,
    VENDEDOR,
    CLIENTE
}
