package com.uern.tep.crminsight.model.enums;

public enum StatusVenda {
    CONCLUIDA,
    CANCELADA,
    EM_ANALISE
}
